Fix overlapping empty notifs

--- a/src/components/notifications/AppNotifications/AppNotificationsEmpty/AppNotificationsEmpty.scss
+++ b/src/components/notifications/AppNotifications/AppNotificationsEmpty/AppNotificationsEmpty.scss
@@ -1,11 +1,10 @@
 .AppNotificationsEmpty {
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
   &__wrapper {
-    transform: translateY(-100%);
+    transform: translateY(+100%);
   }
 
   &__title {
